--- a/www/ar/index.html
+++ b/www/ar/index.html
@@ -30,22 +30,22 @@
 
 
 		<div class="content">
-			<h1>تعليمات لتبادل القسائم</h1>
-			<p>هل تحصل على بطاقة الدفع و50 يورو نقدًا فقط في الشهر؟ إذا كنت بحاجة إلى المزيد من النقود، فدعنا نتبادل!</p>
+			<h1>دليل استبدال القسائم</h1>
+			<p>هل تحصل على بطاقة الدفع و50 يورو نقدًا فقط في الشهر؟ إذا كنت تحتاج إلى المزيد من النقود، دعنا نتبادل!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
 			<ol>
-				<li><strong>قم بشراء قسيمة</strong> في المتاجر <span translate="no">Aldi</span>، <span translate="no">Lidl</span>، <span translate="no">Edeka</span>، <span translate="no">Kaufland</span>، <span translate="no">Penny</span>، <span translate="no">Rewe</span> أو <span translate="no">DM</span> مقابل <strong>50€</strong></li>
-				<li><strong>أحضر القسيمة إلى نقطة التبادل!</strong><br>هنا تحصل على النقود مقابل القسائم.</li>
+				<li><strong>قم بشراء قسيمة</strong> في المتاجر <span translate="no">Aldi</span>، <span translate="no">Lidl</span>، <span translate="no">Edeka</span>، <span translate="no">Kaufland</span>، <span translate="no">Penny</span>، <span translate="no">Rewe</span> أو <span translate="no">DM</span> بقيمة <strong>50€</strong></li>
+				<li><strong>أحضر القسيمة إلى مكان التبادل!</strong><br>ستحصل هنا على النقود مقابل القسائم.</li>
 			</ol>
 
 			<h2>أين؟</h2>
 			<p translate="no">Bürgerbüro Die Linke<br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p>
 
-			<p>يمكن الوصول إليها بشكل أفضل عبر وسائل النقل العامة من محطتي <span translate="no">Betriebshof</span> و<span translate="no">Hauptbahnhof</span></p>
+			<p>من الأفضل الوصول عن طريق وسائل النقل العامة من المحطات <span translate="no">Betriebshof</span> و <span translate="no">Hauptbahnhof</span></p>
 			<h2>متى؟</h2>
-			<p>كل ثاني ثلاثاء وكل ثالث جمعة في الشهر.</p>
+			<p>كل ثاني ثلاثاء وكل ثالث جمعة في الشهر من الساعة 16:00 إلى الساعة 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -53,89 +53,136 @@
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>في هايدلبرغ ومنطقة راين-نيكار، سيتم قريباً تقديم بطاقة "الدفع" التمييزية لجميع اللاجئين الذين يتلقون المساعدات وفقًا لقانون مزايا طالبي اللجوء. وراء القرار بتقديم بطاقة الدفع تكمن سياسات عنصرية، تحاول تقييد حياة اللاجئين واستبعاد أوروبا عن الجنوب العالمي. نحن نقاوم بطاقة الدفع التقييدية ونريد أن نجعل التضامن ممارسة!</p>
+			<p>في هايدلبرج ومنطقة راين نيكار، سيتم تقديم "بطاقة الدفع" التمييزية قريبًا لجميع اللاجئين الذين يتلقون مساعدات وفقًا لقانون مساعدات طالبي اللجوء. وراء القرار بشأن بطاقة الدفع، توجد سياسة عنصرية تحاول تقييد حياة اللاجئين ومواصلة عزل أوروبا عن الجنوب العالمي. نحن نعارض بطاقة الدفع التقييدية ونريد أن نجعل التضامن عمليًا!</p>
 
 			<h2>لماذا نرفض بطاقة الدفع؟</h2>
 
-			<p>تعتبر بطاقة الدفع تدخلاً في استقلالية اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. ستكون هناك حد نقدي قدره 50€ في منطقة راين-نيكار. من المتوقع أن يكون هناك أيضًا قيود مماثلة في هايدلبرغ. التحويلات المصرفية، التسوق عبر الإنترنت والعقود ليست ممكنة أو تتطلب جهدًا كبيرًا. تحتاج العديد من جوانب الحياة اليومية إلى النقود: مثل المتاجر الأصغر، السوق الأسبوعي، الأسواق الرخيصة أو حتى الفعاليات الثقافية. كل هذا يتم تقييده ببطاقة الدفع.</p>
+			<p>تمثل بطاقة الدفع تدخلًا في استقلالية اللاجئين وتؤدي إلى تقييد المشاركة في الحياة اليومية. في منطقة راين نيكار، سيكون هناك حد أقصى للمبالغ النقدية بقيمة 50€. ومن المتوقع أن يكون هناك تقييد مماثل في هايدلبرج. التحويلات، التسوق عبر الإنترنت والعقود غير ممكنة أو تتطلب جهدًا كبيرًا. هناك العديد من مجالات الحياة التي تتطلب النقود: مثل المتاجر الصغيرة، السوق الأسبوعي، أسواق السلع المستعملة وحتى الفعاليات الثقافية. كل هذا يتم تقييده بواسطة بطاقة الدفع.</p>
 
-			<p>حتى لو كانت بطاقة الدفع تبدو من الخارج كبطاقة EC، فإن تطبيقاتها محدودة بكثير، حيث تعمل البطاقة فقط في متاجر معينة. إذا أراد المتأثرون رغم الخدمات المحدودة وضع أموال جانبًا لدعم أسرهم في الخارج، فإن ذلك يصبح صعبًا للغاية. تعتبر البطاقة مشكلة من حيث حماية البيانات. توفر بطاقة الدفع للمؤسسات نظرة وفرصًا للتحكم.</p>
-
-
-			<h2>ما الذي نخطط للقيام به؟</h2>
+			<p>على الرغم من أن بطاقة الدفع تشبه من الخارج بطاقة EC، إلا أن إمكانيات استخدامها أكثر تقييدًا، حيث تعمل البطاقة فقط في المتاجر المحددة. وإذا أراد المتضررون توفير المال رغم الخدمات المحدودة لدعم أسرهم في الخارج، يصبح الأمر صعبًا عليهم. البطاقة تثير القلق من ناحية حماية البيانات. توفر بطاقة الدفع للسلطات إمكانية الفهم ووسائل التحكم.</p>
 
 
-			<p>نحن لا نريد قبول هذه البطاقة التمييزية والمستبعِدة في هايدلبرغ ونظهر التضامن مع المتضررين.</p>
+			<h2>ما الذي نخطط له؟</h2>
 
-			<p>لمواجهة قيود بطاقة الدفع، نتجمع محليًا معًا. بناءً على نموذج العديد من المبادرات الأخرى على الصعيد الوطني، نريد أيضًا في هايدلبرغ ومحيطها تنظيم تبادل القسائم.<p>
+
+			<p>نريد في هايدلبرج أن لا نقبل هذه البطاقة التمييزية والإقصائية ونظهر تضامننا مع المتضررين.</p>
+
+			<p>لمواجهة قيود بطاقة الدفع، نتحد محليًا. تحت نموذج العديد من المبادرات الأخرى على مستوى البلاد، نرغب في تنظيم تبادل القسائم في هايدلبرج والمناطق المحيطة.<p>
 
 			<p>المبدأ:</p>
 
 			<ol>
-				<li>يقوم الأشخاص الذين لديهم بطاقة الدفع بشراء قسيمة الشراء من السوبر ماركت</li>
+				<li>الناس الذين لديهم بطاقة الدفع يشترون قسيمة شراء في السوبرماركت</li>
 				<li>في تبادل القسائم يحصلون على قيمة القسيمة نقدًا</li>
-				<li>الأشخاص المتضامنون الذين ليس لديهم بطاقة الدفع يحصلون على القسائم مقابل النقود</li>
+				<li>الناس المتضامنون بدون بطاقة الدفع يحصلون على القسائم مقابل النقود</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>لا تُعتبر عمليات التبادل مخالفة للقانون بل هي استجابة لسياسة يُعتقد أنها غير دستورية، حيث يتم انتهاك حقوق الأساسية للمتضررين ويهدد حد النقود البالغ 50€ الحد الأدنى للوجود الكريم. (يمكن الاطلاع عليه في: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
+			<p>إن عمليات التبادل ليست غير قانونية ولكنها رد على سياسة قد تكون غير دستورية، حيث تنتهك حقوق المتضررين والحد الأقصى للنقد البالغ 50€ يهدد الحد الأدنى للمعيشة الكريمة. (يمكنك قراءته تحت: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
 
-			<h2>كيف يمكنك المساعدة؟</h2>
+			<h2>كيف يمكنك الدعم؟</h2>
 
-			<p>يرجى الاتصال بنا والمشاركة في اجتماعاتنا إذا كنت...</p>
+			<p>لا تتردد في التواصل معنا و/أو الحضور في لقاءاتنا إذا كنت...</p>
 			<ul>
-				<li>... تريد تقديم وجهات نظرك الخاصة</li>
-				<li>... تريد المساعدة في تنظيم أسواق التبادل</li>
-				<li>... تريد تحمل ساعات في سوق التبادل</li>
+				<li>... ترغب في مشاركة آرائك الخاصة</li>
+				<li>... ترغب في دعم تنظيم أسواق التبادل</li>
+				<li>... ترغب في تولي نوبات عمل في سوق التبادل</li>
 				<li>... يمكنك توفير أماكن لنا</li>
-				<li>... أنت منظم في أماكن ومستعد لتوزيع قسائم الشراء في أماكنك</li>
-				<li>... يمكنك شراء كميات جماعية من قسائم الشراء منا، مثلًا لجماعتك، مشروعك السكني، جمعيتك...</li>
-				<li>... تريد المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
-				<li>... تريد دعم الجهود القانونية ضد بطاقة الدفع أو ببساطة إذا كنت تريد التعرف علينا أو لديك أسئلة.</li>
+				<li>... منظمة في أماكن ومستعدة لتقديم قسائم شراء في أماكنكم</li>
+				<li>... يمكنك أنت وفريقك شراء قسائم شراء، مثلًا لشقتك المشتركة، مشروع بيتك، جمعيتك...</li>
+				<li>... ترغب في المشاركة في حملة سياسية ضد هذه الهجمات العنصرية</li>
+				<li>... ترغب في دعم الجهود القانونية ضد بطاقة الدفع أو إذا كنت تريد التعرف علينا أو لديك أسئلة.</li>
 			</ul>
 
-			<p>نحن نعتمد أيضًا على التبرعات. نحتاج إلى وسادة مالية لعمليات التبادل. بالإضافة إلى ذلك، نحتاج إلى بعض المال لمواد مثل المنشورات أو الملصقات، وشراء أشياء صغيرة مثل صناديق القفل أو ماسحات الباركود أو إيجارات الغرف لعقد فعاليات إعلامية. يمكن إصدار إيصالات التبرعات.</p>
+			<p>نحن بحاجة أيضًا إلى التبرعات. لتبادل القسائم، نحتاج إلى مال كافٍ. بالإضافة إلى ذلك، نحتاج إلى بعض المال، على سبيل المثال للمواد مثل المنشورات أو الملصقات، والمشتريات الصغيرة مثل الصناديق المقفلة أو ماسحات الباركود أو إيجارات الأماكن للفعاليات التوعوية. يمكن إصدار إيصالات التبرعات.</p>
 
-			<p>من أجل عالم متضامن!</p>
+			<p>لنعمل من أجل عالم متضامن!</p>
 
-			<h2>كيف تبدو الهياكل عبر المنطقة؟</h2>
+			<h2>كيف تبدو الهياكل فوق الإقليمية؟</h2>
 
-			<p>هناك بالفعل مبادرات في العديد من المدن ضد بطاقة الدفع ومبادرات التبادل مثل مبادرتنا. نحن مرتبطون على المستوى الوطني في شبكة "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">موقع الويب</a>، <a href="https://www.instagram.com/gleichesozialerechtefueralle">إنستغرام</a>)</p>
+			<p>هناك بالفعل في العديد من المدن مبادرات ضد بطاقة الدفع ومبادرات تبادل مثل ما نقوم به. نحن متصلون بشبكة وطنية "حقوق اجتماعية متساوية للجميع!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">موقع الويب</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">إنستغرام</a>)</p>
 
 			<h2>مزيد من المعلومات</h2>
 			
 
 			<ul>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">التقييم العلمي لبطاقة الدفع</a><br/>شبكة دعم اللاجئين في بادن-فورتمبيرغ</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل وأقل للاجئين</a><br/>شبكة دعم اللاجئين في بادن-فورتمبيرغ</li>
-				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان بادن-فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">تقييم علمي لبطاقة الدفع</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق أقل وأقل للأشخاص اللاجئين</a><br/>مجلس اللاجئين بادن فورتمبيرغ</li>
+				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">ما الذي يجب معرفته عن بطاقة الدفع الجديدة للاجئين</a><br/>برلمان بادن فورتمبيرغ</li>
 			</ul>
 		</div>
 
 		<div id="openletter" class="content">
-			<h1>خطاب مفتوح</h1>
+			<h1>رسالة مفتوحة</h1>
 
-			<p>السيدة العمدة يانسن المحترمة، والسادة أعضاء لجنة الشؤون الاجتماعية وتكافؤ الفرص،</p>
+			<p>السيدة المحترمة العمدة يانسن، السادة أعضاء لجنة
+			الشؤون الاجتماعية وتكافؤ الفرص،</p>
 
-			<p>نشاهد بفزع وصدمة إدخال بطاقة الدفع تدريجيًا للأشخاص الذين يحصلون على مزايا قانون طالبي اللجوء في بادن-فورتمبيرغ. نظرًا لعدد الجوانب التمييزية والتقييدية والإقصائية لبطاقة الدفع، فإننا نعترض على إدخالها في هايدلبرغ.</p>
+			<p>نراقب بقلق ودهشة تقديم بطاقة
+			الدفع بشكل تدريجي للأشخاص الذين يتلقون إعانات بموجب قانون المساعدات لطالبي
+			اللجوء في بادن فورتمبيرغ.
+			بسبب العديد من الجوانب التمييزية والمقيدة والحصرية
+			لبطاقة الدفع، نتحدث ضد تقديمها في هايدلبرغ.</p>
 
 			<ol>
-			<li>الأشخاص الباحثون عن الحماية لديهم في هايدلبرغ، كما هو الحال مع الجميع، حساب بنكي. يمكنهم من خلال بطاقة الحساب البنكي التصرف بأموالهم. إذا لم يكونوا بعد في سوق العمل، فإنهم يحصلون بدايةً على مزايا قانون طالبي اللجوء. من المفترض أن تُحوَّل هذه المزايا إلى بطاقات الدفع، حيث يتم تقييد النفقات النقدية وكذلك التحويلات/الأوامر الدائمة. الهدف: لا تحويلات إلى الأسرة الخاصة أو إلى المهربين، الردع، تقليل عوامل الجذب. هذا الخلفية لبطاقة الدفع تتعارض مع حقوقنا الأساسية: حظر التمييز، حماية الأسرة، الحقوق الشخصية.</li>
+			<li>الأشخاص الحماية في هايدلبرغ مثل الآخرين لديهم حساب بنكي. باستخدام
+			بطاقة حساب الجيرو يمكنهم الوصول إلى أموالهم. إذا لم يكونوا في القوة العاملة
+			حتى الآن، يتلقون أولاً إعانات بموجب قانون AsylbLG. من المفترض أن يتم تحويل
+			هذه الإعانات إلى بطاقات دفع في المستقبل، مما يقيد النفقات النقدية وكذلك
+			التحويلات/الخصم المباشر. الهدف: لا تحويلات للعائلة الخاصة أو للمهربين،
+			تخويف، تقليل "عوامل السحب". هذا
+			الخلفية لبطاقة الدفع تنتهك حقوقنا الأساسية: حظر التمييز، حماية الأسرة،
+			الحقوق الشخصية.</li>
 
-			<li>تمثل بطاقة الدفع تدخلاً في الحقوق الشخصية. يتم مضايقة اللاجئين بها. قد لا يتمكنون من الشراء في المتاجر التي يفضلونها، لأن تكلفة تركيب جهاز القراءة للبطاقات في المتاجر الصغيرة قد تكون باهظة. للحصول على التحويلات والأوامر الدائمة، يحتاج الأمر إلى موافقة مكتب الشؤون الاجتماعية. إذا كانت هناك احتياجات خاصة، يجب تقديم طلب. مبلغ 50 يورو نقدًا هو مبلغ يعتمد على تقدير المكتب. التخصيص نفسه لبطاقة الدفع يعتمد على التقدير. وهذا لن يثقل كاهل الإدارة فقط، بل يزيد من اعتماد المتضررين على المكتب إلى حد مرعب، أيضًا لأنه تفقد الشفافية بالنسبة لهم.</li>
+			<li>بطاقة الدفع هي تدخل في الحقوق الشخصية. يتم تكبيد الأشخاص اللاجئين بذلك.
+			قد لا يتمكنون من الشراء في المتاجر المفضلة لديهم، لأن المتاجر الصغيرة
+			تجد تجهيز جهاز القراءة للبطاقة الخصم مكلفًا للغاية. للتحويلات والخصم المباشر
+			تحتاج إلى
+			موافقة بواسطة مكتب الشؤون الاجتماعية. إذا كانت هناك احتياجات خاصة، يجب تقديم طلب
+			. 50 € نقدًا هو مبلغ يعتمد على تقدير المكتب. تعيين بطاقة الدفع نفسها يعتمد على
+			التقدير. لن يؤدي هذا فقط إلى زيادة عبء العمل على الإدارة، ولكنه أيضًا يجعل
+			الاعتماد الضخم للمتضررين على
+			المكتب، أيضًا لأن الشفافية لهم تضيع.</li>
 
-			<li>لن يتحقق هدف إدخال بطاقة الدفع على أي حال. يُظهر التقرير الأسبوعي رقم 49/2024 لـ DIW أن التحويلات الخارجية نادرًا ما تأتي من اللاجئين، وبالتأكيد أقل من أولئك الذين يتلقون مزايا قانون طالبي اللجوء، لأن هذه المزايا (بحد أقصى 441€) أقل من بدل المواطن وليسوا كافيين بالتأكيد لتلبية المتطلبات التي وضعها حكم المحكمة الدستورية الفيدرالية في عام 2012، والذي يقضي بأن الحد الأدنى للوجود الكريم لا يمكن أن يُقلل بسبب السياسات المتعلقة بالهجرة. وأيضًا بالتأكيد، تفوق أسباب الهجرة السؤال عن المزايا.</li>
+			<li>بالطبع، لن تتحقق الغاية من إدخال بطاقة الدفع. تقرير الأسبوع 49/2024
+			لـ DIW يُظهر أن التحويلات للخارج تأتي فقط بنسب قليلة من
+			الأشخاص اللاجئين، وبالتأكيد الأقل من أولئك الذين يتلقون إعانات بموجب
+			قانون AsylbLG، لأن هذه الإعانات (الأكثر 441€) أقل من
+			راتب المواطن ولا تلبي بالتأكيد المتطلبات، التي أقرها حكم المحكمة الدستورية الفيدرالية
+			لعام 2012 بدون أن يكون الحد الأدنى للمعيشة موجهًا بأغراض الهجرة. وبالطبع
+			أسباب الهروب أكبر بكثير من القضية الحمد.</li>
 
-			<li>إن إدخال بطاقة الدفع التقييدية هو جزء من هجوم كبير على حقوق الأشخاص الباحثين عن الحماية. يتزامن التناقص في الحقوق الاجتماعية للاجئين مع تعزيز القلعة الأوروبية وجهود التخلص تدريجيًا من مسؤولية حماية اللاجئين (الإعلان العالمي لحقوق الإنسان لعام 1948، المادة 14) والالتزامات، وأخيرًا وليس آخرًا في شكل اتفاقية جنيف للاجئين. تمكنت اليمين المتطرف من تطوير خطاب معمق، يعتبر الباحثين عن الحماية تهديدًا فقط. للأسف، تكرر الأحزاب الديمقراطية هذا الخطاب العنصري منذ سنوات، مما يدفع بعمليات فقدان التضامن قدمًا ويحول النقاش الاجتماعي نحو اليمين. إن بطاقة الدفع ليست سوى سياسة رمزية شعبوية، تستغل العنصرية وتزيد من استبعاد الباحثين عن الحماية، وتضيف إلى تمييزهم ومراقبتهم. التكامل يبدو مختلفًا!</li>
+			<li>تقديم بطاقة دفع تقييدية هو جزء من هجوم كبير على حقوق
+			الأشخاص اللاجئين. تقليل الحقوق الاجتماعية للأشخاص اللاجئين يترافق مع
+			بناء قلعة أوروبا ومحاولات، للتهرب من الالتزام بحماية اللاجئين
+			(الإعلان العالمي لحقوق الإنسان لعام 1948، المادة 14) والالتزامات ليس أقل
+			في شكل اتفاقية جنيف المتعلقة بوضع اللاجئين بعد فترة وجيزة. لقد نجح
+			اليمين المتطرف في تطوير خطاب بارز،
+			يعتبر الأشخاص اللاجئين كتهديد فقط. للأسف، حتى
+			الأحزاب الديمقراطية في السنوات الأخيرة متزايدا تتبنى هذه
+			الخطاب العنصري. إنهم بذلك يتقدمون
+			عمليات التخلص من التضامن وينقلون النقاش الاجتماعي لليمين. بطاقة الدفع ليست سوى
+			سياسة رمزية شعبوية
+			تخدم العنصرية وتستمر في تهميش،
+			التمييز والتحكم في اللاجئين. لا يبدو هذا طرق التكامل!</li>
 
-			<li>ليس إدخال بطاقة الدفع بدون بدائل. لقد أدخلت NRW قاعدة اختيار عدم الاشتراك، التي تسمح للبلديات بعدم إدخال بطاقة الدفع. لقد استفادت العديد من المدن الكبرى بالفعل من ذلك. ولكن حتى في ساكسونيا السفلى، يتزايد الاحتجاج: على الرغم من عدم وجود قاعدة اختيار عدم الاشتراك هناك، أعلن مدينة هانوفر عن عدم إدخال بطاقة الدفع، مما يقدم مقاومة مفتوحة بثقة. لقد أعلن المجلس البلدي بأغلبية ومع الأحزاب من CDU وSPD والخضر رفضهم لإدخال البطاقة لأنها تمييزية.</li>
+			<li>لا يوجد بديل لشركة بطاقة الدفع. لقد أنشأت NRW
+			قاعدة خيار الإنسحاب
+			، والتي تسمح للبلديات بعدم إدخال بطاقة الدفع. وقد قامت العديد من
+			المدن الكبرى بذلك بالفعل. ولكن أيضًا في ساكسونيا السفلى
+			هناك معارضة: على الرغم من عدم وجود قاعدة خيار الإنسحاب، إلا أن مدينة هانوفر
+			توضيح أنها لن تقدم بطاقة الدفع وتشارك بذلك بشجاعة
+			المقاومة العلنية. مجلس المدينة
+			أعلن الأغلبية ومع أحزاب CDU وSPD والخضر
+			أنهم لن يقدموا البطاقة، لأنها تمييزية.</li>
 
 			</ol>
 
-			<p>نحن ندعو الفصائل في مجلس بلدية هايدلبرغ والإدارة لرفض البطاقة التمييزية وغير المجدية أيضًا في هايدلبرغ.</p>
+			<p>ندعو الأحزاب في مجلس مدينة هايدلبرغ والإدارة إلى رفض
+			بطاقة الدفع التمييزية والغير مجدية أيضًا في هايدلبرغ.</p>
 
-			<p>الموقعون الأوائل</p>
+			<p>الموقعين الأوائل</p>
 
 			<ul>
 				<li translate="no">Bettina Bauer-Teiwes</li>
@@ -182,25 +229,25 @@
 		</div>
 
 		<div id="contact" class="content">
-			<h1>الاتصال والتبرعات</h1>
+			<h1>الدعم والتبرعات</h1>
 
-			<p>نحن هيكل مفتوح ونجتمع بانتظام لتنسيق الخطوات اللاحقة. هل ترغب في أن تصبح نشطًا ضد بطاقة الدفع؟ ثم تعال إلى أحد اجتماعاتنا القادمة أو تواصل معنا.</p>
+			<p>نحن هيكل مفتوح ونجتمع بانتظام لتنسيق الخطوات القادمة. هل أنت مهتم بأن تصبح نشطًا ضد بطاقة الدفع؟ ثم احضر أحد اجتماعاتنا القادمة أو اتصل بنا.</p>
 
 			<h2>الاتصال</h2>
 
 			<ul>
 				<li>البريد الإلكتروني:<br/><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>إنستغرام:<br/><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
-				<li translate="no">Telegram:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
+				<li translate="no">تلغرام:<br/><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
 
-			<h2>تبرع</h2>
+			<h2>التبرعات</h2>
 
 			<pre translate="no">Röm.-Kath.
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			الغرض من التبرع مهم، وإلا فلن يتم تخصيص التبرع بشكل صحيح!
+			استخدام هدف الاستخدام مهم، وإلا لن يتم تخصيص التبرع!
 		</div>
 
 	</body>
