--- a/www/en/index.html
+++ b/www/en/index.html
@@ -31,7 +31,7 @@
 
 		<div class="content">
 			<h1>Instructions for exchanging vouchers</h1>
-			<p>You get the payment card and only €50 in cash per month? If you need more cash, then let and exchange!</p>
+			<p>You get the payment card and only 50€ cash per month? If you need more cash, then let's swap!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
@@ -45,7 +45,7 @@
 
 			<p>Best reached by public transport from the stops <span translate="no">Betriebshof</span> and <span translate="no">Hauptbahnhof</span></p>
 			<h2>When?</h2>
-			<p>Every 2nd Tuesday and every 3rd Friday of the month.</p>
+			<p>Every 2nd Tuesday and every 3rd Friday of the month from 16:00 to 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -79,7 +79,7 @@
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>The exchange campaigns are not unlawful but a response to an allegedly unconstitutional policy, as the basic rights of those affected are being violated and the cash ceiling of €50 jeopardizes the humane subsistence level. (Read more at: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Stage victory in summary proceedings against restrictive payment card: PRO ASYL and GFF support complaining family</a> | PRO ASYL)</p>
+			<p>The exchange campaigns are not unlawful but a response to an allegedly unconstitutional policy, as the basic rights of those affected are being violated and the cash ceiling of €50 jeopardizes the humane minimum subsistence level. (Read more at: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Stage victory in summary proceedings against restrictive payment card: PRO ASYL and GFF support complaining family</a> | PRO ASYL)</p>
 
 			<h2>How can you provide support?</h2>
 
@@ -91,7 +91,7 @@
 				<li>... you can make premises available to us</li>
 				<li>... you are organized in rooms and you would be willing to give out shopping vouchers in your rooms</li>
 				<li>... collectively buy vouchers from us, e.g. for your shared flat, your house project, your club...</li>
-				<li>... want to take part in a political campaign against these racist attacks</li>
+				<li>... want to participate in a political campaign against these racist attacks</li>
 				<li>... want to support us, take legal action against the payment card or simply if you want to get to know us or have questions.</li>
 			</ul>
 
