--- a/www/es/index.html
+++ b/www/es/index.html
@@ -40,12 +40,12 @@
 				<li><strong>Lleve el vale a un centro de canje.</strong><br>Allí recibirá dinero en efectivo por los vales.</li>
 			</ol>
 
-			<h2>¿Dónde?</h2>
+			<h2>¿dónde?</h2>
 			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
 
 			<p>Se llega mejor en transporte público desde las paradas de autobús <span translate="no">Betriebshof</span> y <span translate="no">Hauptbahnhof</span></p>
 			<h2>¿Cuándo?</h2>
-			<p>Todos los segundos martes y terceros viernes de cada mes.</p>
+			<p>Todos los segundos martes y terceros viernes de mes, de 16.00 a 19.00 horas.</p>
 		</div>
 
 		<div class="content">
