--- a/www/fa/index.html
+++ b/www/fa/index.html
@@ -30,119 +30,112 @@
 
 
 		<div class="content">
-			<h1>راهنمای تبادل کوپن</h1>
-			<p>آیا کارت پرداخت و فقط ۵۰ یورو پول نقد در ماه دریافت می‌کنی؟ اگر به پول نقد بیشتری نیاز داری، بیایید تبادل کنیم!</p>
+			<h1>راهنمای مبادله کارت هدیه</h1>
+			<p>کارت پرداخت و فقط ۵۰ یورو نقدی در ماه دریافت می‌کنی؟ اگر به پول نقد بیشتری نیاز داری، بیا با هم عوضش کنیم!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
 			<ol>
-				<li><strong>یک کوپن خریداری کن</strong> در فروشگاه‌های <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> یا <span translate="no">DM</span> به مبلغ <strong>۵۰ یورو</strong></li>
-				<li><strong>کوپن را به یک مرکز تبادل ببر!</strong><br>اینجا در ازای کوپن‌ها پول نقد دریافت می‌کنی.</li>
+				<li><strong>یک کارت هدیه بخر</strong> در فروشگاه‌های <span translate="no">Aldi</span>, <span translate="no">Lidl</span>, <span translate="no">Edeka</span>, <span translate="no">Kaufland</span>, <span translate="no">Penny</span>, <span translate="no">Rewe</span> یا <span translate="no">DM</span> به ارزش <strong>۵۰ یورو</strong></li>
+				<li><strong>کارت هدیه را به یک مرکز مبادله بیاور!</strong><br>در اینجا می‌توانی برای کارت‌های هدیه پول نقد دریافت کنی.</li>
 			</ol>
 
 			<h2>کجا؟</h2>
 			<p translate="no">Bürgerbüro Die Linke<br>Theodor-Körner-Str. 7<br>69115 Heidelberg</p>
 
-			<p>بهترین دسترسی با وسایل حمل و نقل عمومی از ایستگاه‌های <span translate="no">Betriebshof</span> و <span translate="no">Hauptbahnhof</span></p>
+			<p>بهترین راه دسترسی با وسایل نقلیه عمومی از ایستگاه‌های <span translate="no">Betriebshof</span> و <span translate="no">Hauptbahnhof</span></p>
 			<h2>چه زمانی؟</h2>
-			<p>هر دومین سه‌شنبه و هر سومین جمعه در ماه.</p>
+			<p>هر دومین سه‌شنبه و سومین جمعه ماه از ساعت ۱۶:۰۰ تا ۱۹:۰۰.</p>
 		</div>
 
 		<div class="content">
-			<h1>کارت پرداخت را متوقف کن!</h1>
+			<h1>کارت پرداخت را متوقف کنید!</h1>
 
 			<img id="logo" src="../static/img/bzklogo.svg" />
 			
-			<p>به زودی در هایدلبرگ و منطقه راین-نکار کارت پرداخت تبعیض‌آمیز برای همه پناهندگانی که از قوانین مزایای پناهندگی بهره می‌برند معرفی خواهد شد. پشت تصمیم برای کارت پرداخت، سیاستی نژادپرستانه است که سعی در محدود کردن روزافزون زندگی پناهندگان و جداسازی اروپا از جنوب جهانی دارد. ما در برابر کارت پرداخت محدودکننده اعتراض داریم و می‌خواهیم همبستگی را به عمل تبدیل کنیم!</p>
+			<p>در هایدلبرگ و ناحیه راینگ-نکار به زودی کارت پرداخت تبعیض‌آمیز برای همه پناهندگان که بر اساس قانون مزایای پناهجویان کمک دریافت می‌کنند، معرفی می‌شود. پشت تصمیم برای کارت پرداخت، سیاست نژادپرستانه‌ای است که به دنبال محدود کردن زندگی پناهندگان و بستن اروپا به سوی جنوب جهانی است. ما علیه کارت پرداخت محدودیت‌آور مقاومت کرده و می‌خواهیم همبستگی را به عمل تبدیل کنیم!</p>
 
 			<h2>چرا ما کارت پرداخت را رد می‌کنیم؟</h2>
 
-			<p>کارت پرداخت به معنای دخالت در استقلال افراد پناه‌جو است و منجر به محدود شدن مشارکت در زندگی روزمره می‌شود. در منطقه راین-نکار، محدودیت پول نقد ۵۰ یورو خواهد بود و انتظار می‌رود محدودیت مشابه‌ای نیز در هایدلبرگ وجود داشته باشد. انتقال‌ها، خریدهای آنلاین و قراردادها یا غیرممکن هستند یا با تلاش زیاد ممکن هستند. بسیاری از زمینه‌های زندگی به پول نقد نیاز دارند: به عنوان مثال، مغازه‌های کوچک، بازارهای هفتگی، بازارهای دست دوم و یا رویدادهای فرهنگی. همه این‌ها از طریق کارت پرداخت محدود می‌شود.</p>
+			<p>کارت پرداخت یک دست‌درازی به خودمختاری افراد پناهنده است و منجر به محدودیت مشارکت در زندگی روزمره می‌شود. در ناحیه راینگ-نکار محدودیت پول نقد ۵۰ یورو خواهد بود. انتظار می‌رود که در هایدلبرگ نیز محدودیت مشابهی وجود داشته باشد. انتقالات، خریدهای آنلاین و قراردادها یا غیرممکن هستند یا بسیار دشوار. بسیاری از جنبه‌های زندگی به پول نقد نیاز دارند: به عنوان مثال فروشگاه‌های کوچک، بازار هفتگی، بازاری‌های کوچک یا رویدادهای فرهنگی. همه این‌ها با کارت پرداخت محدود می‌شود.</p>
 
-			<p>حتی اگر کارت پرداخت از نظر ظاهری شبیه کارت های EC باشد، توانایی‌های کاربردی آن بسیار محدودتر است، زیرا کارت تنها در فروشگاه‌های خاصی کار می‌کند. و اگرچه حتی با وجود خدمات محدود، افرادی که می‌خواهند پولی برای خانواده‌هایشان در خارج از کشور کنار بگذارند، از این کار به شدت جلوگیری می‌شود. کارت از نظر حفاظت از داده‌ها مشکل‌ساز است. کارت پرداخت آزادي و امكانات كنترل را به اداره‌ها ارائه می‌کند.</p>
-
-
-			<h2>برنامه ما چیست؟</h2>
+			<p>حتی اگر کارت پرداخت از نظر ظاهر شبیه یک کارت عابربانک باشد، موارد استفاده از آن بسیار محدودتر است، زیرا کارت تنها در فروشگاه‌های خاصی کار می‌کند. و اگر کسانی که علی‌رغم مزایای کم به دنبال سرمایه‌گذاری برای حمایت مالی از خانواده خود در خارج هستند، این برایشان بسیار دشوار می‌شود. کارت پرداخت از نظر حفظ حریم خصوصی مشکلاتی دارد. کارت پرداخت به مراجع بینش و امکانات نظارتی ارائه می‌دهد.</p>
 
 
-			<p>ما در هایدلبرگ این کارت تبعیض‌آمیز و خارج کننده را نمی‌پذیریم و می‌خواهیم همبستگی‌مان را با کسانی که تحت تأثیر هستند نشان دهیم.</p>
+			<h2>ما چه برنامه‌ای داریم؟</h2>
 
-			<p>برای مقابله با محدودیت‌های کارت پرداخت، به صورت محلی گرد هم می‌آییم. بر اساس مدل بسیاری از دیگر ابتکارات در سطح ملی، ما نیز در هایدلبرگ و اطراف آن می‌خواهیم یک تبادل کوپن را سازماندهی کنیم.<p>
 
-			<p>اصل ماجرا:</p>
+			<p>ما نمی‌خواهیم این کارت تبعیض‌آمیز و جداکننده را در هایدلبرگ بپذیریم و می‌خواهیم با افراد تحت تأثیر همبستگی نشان دهیم.</p>
+
+			<p>برای مقابله با محدودیت‌های کارت پرداخت، ما به صورت محلی در کنار هم جمع می‌شویم. با الهام از بسیاری از ابتکارات دیگر در سراسر کشور، می‌خواهیم در هایدلبرگ و اطراف آن مبادله کارت هدیه را سازمان‌دهی کنیم.<p>
+
+			<p>اصل کار:</p>
 
 			<ol>
-				<li>افراد دارای کارت پرداخت یک کوپن خرید از سوپرمارکت خریداری می‌کنند</li>
-				<li>در تبادل کوپن‌ها، آن‌ها ارزش کوپن را به صورت نقدی دریافت می‌کنند</li>
-				<li>افراد متضامنه بدون کارت پرداخت، کوپن‌ها را در ازای پول نقد دریافت می‌کنند</li>
+				<li>افرادی که کارت پرداخت دارند یک کارت هدیه خرید غذایی در سوپرمارکت خریداری می‌کنند</li>
+				<li>در مبادله کارت‌های هدیه ارزش کارت هدیه را به صورت نقدی دریافت می‌کنند</li>
+				<li>افراد همبستگی‌جوی بدون کارت پرداخت کارت‌های هدیه را در ازای پول نقد دریافت می‌کنند</li>
 			</ol>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
-			<p>تبادل‌ها غیرقانونی نیستند بلکه پاسخی به سیاستی است که احتمالاً از نظر قانونی متعارض است، زیرا حقوق بنیادین افراد تحت تأثیر را نقض می‌کند و محدودیت پول نقد ۵۰ یورو حداقل معیشت انسانی را به خطر می‌اندازد. (قابل مطالعه در: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">پیروزی اولیه در یک فرایند اجرایی علیه کارت پرداخت محدودکننده: پرو آسیل و GFF از خانواده‌ شاکی حمایت می‌کنند</a> | پرو آسیل)</p>
+			<p>مبادلات غیرقانونی نیستند بلکه پاسخی به سیاستی است که احتمالاً ناقض قانون اساسی است، چرا که حقوق اساسی افراد تحت تأثیر نقض می‌شود و مرز بالای پول نقد ۵۰ یورو حداقل زندگی انسانی را به خطر می‌اندازد. (می‌توانید در اینجا بخوانید: <a href="https://www.proasyl.de/pressemitteilung/etappensieg-im-eilverfahren-gegen-restriktive-bezahlkarte-pro-asyl-und-gff-unterstuetzen-klagende-familie/">Etappensieg im Eilverfahren gegen restriktive Bezahlkarte: PRO ASYL und GFF unterstützen klagende Familie</a> | PRO ASYL)</p>
 
 			<h2>چگونه می‌توانی حمایت کنی؟</h2>
 
-			<p>با خوشحالی با ما تماس بگیر و یا به جلسات ما بیا، اگر که...</p>
+			<p>خوشحال می‌شویم اگر به ما بپیوندی یا به جلسات ما بیایی، اگر...</p>
 			<ul>
-				<li>... می‌خواهی دیدگاه‌های خود را به ما معرفی کنی</li>
-				<li>... می‌خواهی در سازماندهی بازارهای تبادل حمایت کنی</li>
-				<li>... می‌خواهی شیفت‌های بازار تبادل را به عهده بگیری</li>
-				<li>... می‌توانی فضاهایی در اختیار ما بگذاری</li>
-				<li>... در فضاهای سازماندهی هستی و آماده هستید که در فضاهای خود کوپن خرید عرضه کنید</li>
-				<li>... می‌توانی به صورت جمعی کوپن‌های خرید را بپذیری، مانند: برای اتحادیه‌های خود، پروژه‌های خانه‌ای، انجمن‌های خود...</li>
-				<li>... می‌خواهی در یک کمپین سیاسی علیه این حملات نژادپرستانه کمک کنی</li>
-				<li>... می‌خواهی حمایت کنی تا به صورت قانونی علیه کارت پرداخت اقدام کنیم یا فقط می‌خواهی ما را بهتر بشناسی و یا سوالی داری.</li>
+				<li>... می‌خواهی ایده‌ها و نگرش‌های خودت را وارد کنی</li>
+				<li>... می‌خواهی در سازمان‌دهی بازار مبادلات کمک کنی</li>
+				<li>... می‌خواهی شیفت‌هایی در بازار مبادلات بگیری</li>
+				<li>... می‌توانی مکان‌های را در اختیارمان قرار دهی</li>
+				<li>... در اتاق‌هایی سازمان‌دهی شده‌ای و آماده‌ای کارت‌های هدیه خرید را در اتاق‌هایتان به افراد بدهید</li>
+				<li>... می‌توانی به صورت جمعی کارت‌های هدیه خرید از ما بگیری، برای مثال برای خوابگاهت، پروژه خانه‌ات، انجمنت...</li>
+				<li>... می‌خواهی در کمپین سیاسی علیه این حملات نژادپرستانه مشارکت کنی</li>
+				<li>... می‌خواهی در مبارزه حقوقی علیه کارت پرداخت حمایت کنی یا اگر می‌خواهی ما را بشناسی یا سوالی داری.</li>
 			</ul>
 
-			<p>ما علاوه بر این به کمک‌های مالی نیاز داریم. برای تبادل‌ها به یک حاشیه مالی نیاز داریم. همچنین به کمی بودجه برای موادی مانند اعلامیه‌ها یا پوسترها، خریدهای کوچک مانند جعبه‌های قابل قفل یا بارکد‌اسکنرها یا اجاره سالن‌ها برای رویدادهای اطلاعاتی نیاز داریم. رسیدهای کمک‌های مالی می‌توانند صادر شوند.</p>
+			<p>ما همچنین به کمک‌های مالی متکی هستیم. برای مبادلات به یک واسطه مالی نیاز داریم. همچنین به مقداری پول نیاز داریم، مثلاً برای مواد مانند بروشور یا پوستر، خریدهای کوچک مثل صندوق‌های قفل‌شونده یا اسکنر بارکد یا اجاره فضا برای رویدادهای اطلاعاتی. رسید کمک مالی می‌تواند صادر شود.</p>
 
 			<p>برای جهانی همبسته!</p>
 
-			<h2>ساختارهای فراگیر چگونه به نظر می‌رسند؟</h2>
+			<h2>ساختارهای بین‌المللی چگونه هستند؟</h2>
 
-			<p>در بسیاری از شهرها ابتکاراتی علیه کارت پرداخت و تبادل‌ها مشابه ما وجود دارد. ما در سطح ملی در شبکه "حقوق اجتماعی برابر برای همه!" (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">وب‌سایت</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">اینستاگرام</a>) به هم پیوسته‌ایم.</p>
+			<p>در بسیاری از شهرها ابتکاراتی علیه کارت پرداخت و مبادلات مانند ما وجود دارد. ما به صورت بین‌المللی در شبکه "حقوق اجتماعی برابر برای همه!" متصل شده‌ایم (<a href="https://fluechtlingsrat-bw.de/allgemein/erklaerung-des-netzwerks-gleiche-soziale-rechte-fuer-alle/">وب‌سایت</a>, <a href="https://www.instagram.com/gleichesozialerechtefueralle">اینستاگرام</a>)</p>
 
 			<h2>اطلاعات بیشتر</h2>
 			
 
 			<ul>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">ارزیابی علمی کارت پرداخت</a><br/>شورای پناهندگان بادن-وورتمبرگ</li>
-				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">حقوق کمتر برای افراد پناهنده</a><br/>شورای پناهندگان بادن-وورتمبرگ</li>
-				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">آنچه باید درباره کارت پرداخت جدید برای پناهندگان بدانید</a><br/>پارلمان بادن-وورتمبرگ</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/wissenschaftliche-einschaetzung-der-bezahlkarte/">بررسی علمی کارت پرداخت</a><br/>Flüchtlingsrat Baden-Württemberg</li>
+				<li><a href="https://fluechtlingsrat-bw.de/aktuelles/immer-weniger-rechte-fuer-gefluechtete-menschen/">همواره حقوق کمتری برای افراد پناهجو</a><br/>Flüchtlingsrat Baden-Württemberg</li>
+				<li><a href="https://www.landtag-bw.de/de/aktuelles/dpa-nachrichten/was-man-zur-neuen-bezahlkarte-fuer-fluechtlinge-wissen-muss-511916">آنچه باید درباره کارت پرداخت جدید برای پناهجویان بدانید</a><br/>Landtag Baden-Württemberg</li>
 			</ul>
 		</div>
 
 		<div id="openletter" class="content">
-			<h1>نامه باز</h1>
+			<h1>نامه سرگشاده</h1>
 
-			<p>خانم شهردار جانسن محترم، اعضای محترم کمیته امور اجتماعی و تساوی فرصت‌ها،</p>
+			<p>خانم شهردار یانسن محترم، اعضای محترم کمیته اجتماعی و برابری فرصت‌ها،</p>
 
-			<p>با وحشت و ناباوری ما معرفی تدریجی کارت پرداخت برای افرادی که مزایا از قوانین پناهندگی دریافت می‌کنند در بادن-وورتمبرگ را مشاهده می‌کنیم.
-			به دلیل تعداد زیاد جنبه‌های تبعیض‌آمیز، محدودکننده و محروم‌کننده کارت پرداخت، ما مخالف معرفی آن در هایدلبرگ هستیم.</p>
+			<p>ما با نگرانی و حیرت نظاره‌گر معرفی تدریجی کارت پرداخت برای افرادی که در چارچوب قانون مزایای پناهجویان مزایا دریافت می‌کنند در بادن-وورتمبرگ هستیم. به دلیل تعدد جنبه‌های تبعیض‌آمیز، محدودکننده و تبعیض‌آمیز کارت پرداخت، ما علیه معرفی آن در هایدلبرگ هستیم.</p>
 
 			<ol>
-			<li>افرادی که در جستجوی حمایت هستند، مانند دیگران، در هایدلبرگ حساب بانکی دارند. با کارت حساب بانکی، می‌توانند به پول خود دسترسی داشته باشند. اگر هنوز در بازار کار نیستند، ابتدا از قوانین AsylbLG بهره‌مند می‌شوند. این مبلغ قرار است در آینده روی کارت‌های پرداختی انتقال یابد که هم هزینه‌های نقدی و هم انتقال‌ها/سپرده‌ها را محدود می‌کند. هدف: عدم انتقال به خانواده خود و قاچاقچیان، محدود کردن، کاهش "عوامل جذب". این
-			زمینه برای کارت پرداخت، حقوق اساسی ما را نقض می‌کند: ممنوعیت تبعیض، حمایت از خانواده، حقوق شخصی.</li>
+			<li>افراد پناهجو در هایدلبرگ نیز مانند دیگران دارای حساب بانکی هستند. با کارت حساب جاری می‌توانند بر پول خود دسترسی داشته باشند. اگر هنوز در محیط کار حضور ندارند، ابتدا مزایا را بر مبنای قانون مزایای پناهجویان دریافت می‌کنند. این مزایا باید به زودی به کارت‌های پرداخت منتقل شود که با استفاده از آن‌ها هزینه‌های نقدی و نیز انتقال‌ها/واریزها محدود می‌شود. هدف: عدم انتقال پول به خانواده خود و به قاچاقچیان، جلوگیری، کاهش عوامل جذب. این پیش‌زمینه برای کارت پرداخت در برابر حقوق اساسی ما ناقض است: ممنوعیت تبعیض، حفاظت از خانواده، حقوق شخصی.</li>
 
-			<li>کارت پرداخت دخالتی در حقوق شخصی است. برای افراد پناه‌جو ایجاد محدودیت می‌کند. خرید در فروشگاه‌های مورد ترجیح آنها ممکن است امکان‌پذیر نباشد زیرا برای فروشگاه‌های کوچک نصب دستگاه خواننده کارت هزینه‌بر است. برای انتقال‌ها و سپرده‌ها به تأیید اداره اجتماعی نیاز است. اگر نیازهای خاصی وجود دارد، باید درخواست شود.
-			۵۰ یورو پول نقد مقداری است که به صلاحدید اداره بستگی دارد. تخصیص خود کارت پرداخت نیز به صلاحدید بستگی دارد. این نه تنها بار اضافی برای مدیریت ایجاد می‌کند، بلکه وابستگی بی‌نظیر و برجسته‌ از اداره برای افراد تحت تأثیر ایجاد می‌کند.</li>
+			<li>کارت پرداخت دخالت در حقوق شخصی است. افراد پناهنده با آن محدود می‌شوند. خرید کردن در فروشگاه‌های مورد علاقه آن‌ها ممکن است انجام نشود زیرا برای فروشگاه‌های کوچک نصب دستگاه خواننده کارت‌های دبیت بسیار هزینه‌بر است. برای انتقال‌ها و برداشت‌ها به مجوز اداره اجتماعی نیاز است. اگر نیازهای خاصی وجود داشته باشد، باید درخواست شود. ۵۰ یورو نقدی مبلغی است که به نظر اداره وابسته است. اختصاص کارت پرداخت به خود تحت نظر است. این نه تنها اداره را بیشتر خیر، بلکه وابستگی مبتلایان به دارترا به طور وحشتناکی می‌کند، همچنین حفظ شفافیت برای آن‌ها بیشتر کاهش می‌یابد.</li>
 
-			<li>هدف معرفی کارت پرداخت به هر حال محقق نخواهد شد. گزارش هفتگی DIW شماره ۴۹/۲۰۲۴ نشان می‌دهد که انتقال‌های بین‌المللی تنها به میزان زیادی از پناهندگان نمی‌آید و به طور قطع کمترین منبع از کسانی است که مزایا از قبیل AsylbLG دریافت می‌کنند، زیرا این مزایا (حداکثر ۴۴۱ یورو) همچنان کمتر از کمک هزینه شهروندی است و قطعا نمی‌تواند نیازهای حقوقی حداقل معیشتی که دادگاه قانون اساسی
-			در ۲۰۱۲ تعیین کرد که نباید از نظر سیاست مهاجرتی محدود شود، را برآورده کند. همچنین دلایل پناهندگی بیش از سوالات مزایا وزن دارند.</li>
+			<li>هدف معرفی کارت پرداخت به هر حال به دست نخواهد آمد. گزارش هفتگی ۴۹/۲۰۲۴ DIW نشان می‌دهد که انتقالات خارجی تنها در سطح بسیار کمی از سوی پناهندگان می‌آیند، و بدون شک کمترین آنها از کسانی است که بر مبنای قانون مزایای پناهجویان مزایا دریافت می‌کنند، زیرا این مزایا (حداکثر ۴۴۱ یورو) حتی کمتر از کمک هزینه شهروندی است و به طور قطع نیازهای لازم برای حکم دادگاه فدرال قانون اساسی از سال ۲۰۱۲ را برآورده نمی‌کند، که بر اساس آن حداقل زندگی انسانی نباید بر اساس ملاحظات مهاجرتی تعدیل شود. همچنین، دلایل مهاجرت قطعا اهمیت بیشتری از سوالات مربوط به مزایا دارند.</li>
 
-			<li>معرفی یک کارت پرداخت محدودکننده بخشی از یک تهاجم گسترده به حقوق افراد جستجوگر حمایت است. کاهش حقوق اجتماعی پناهندگان همراه با تقویت قلعه اروپا و تلاش‌های برای خلع مسئولیت حفاظت از پناهندگان (اعلامیه حقوق بشر عمومی ۱۹۴۸، ماده ۱۴) و تعهدات به شکل کنوانسیون پناهندگان ژنو است. گروه‌های راست افراطی موفق به توسعه یک گفتمان تعیین‌کننده شده‌اند که افراد جستجوگر حمایت
-			را فقط به عنوان تهدید می‌بیند. متأسفانه، این گفتمان نژادپرستانه نیز توسط احزاب دموکراتیک به مدت سال‌ها به‌طور فزاینده‌ای اتخاذ شده است. آن‌ها با این کار فرآیندهای انبوه‌سازی اجتماعی را تقویت کرده و گفتمان اجتماعی را به سمت راست سوق می‌دهند. کارت پرداخت چیزی جز سیاست نمادین پوپولیستی نیست که نژادپرستی را تقویت کرده و افراد جستجوگر حمایت را بیشتر بیگانه، تبعیض‌آمیز و
-			کنترل می‌کند. ادغام منظور دیگری دارد!</li>
+			<li>معرفی کارت پرداخت محدود بخشی از حمله‌ای بزرگ بر حقوق افراد پناهجو است. کاهش حقوق اجتماعی پناهندگان با تقویت قلعه اروپا و تلاش‌ها برای فرار از مسئولیت در مورد حمایت از پناهندگان (اعلامیه جهانی حقوق بشر از سال ۱۹۴۸، ماده ۱۴) و تعهدات کنوانسیون ژنو به تدریج تلفیق‌ می‌شود. نیروهای افراطی موفق شده‌اند گفتمانی اکید ایجاد کنند که افرادی که به دنبال پناهندگی هستند تنها به عنوان تهدیدی دیده می‌شوند. این روایت نژادپرستانه نیز متأسفانه سالها است که توسط حزب‌های دموکراتیک به طور فزاینده‌ای پذیرفته شده است. آن‌ها با این روندهای ضد همبستگی پیش می‌روند و گفتمان اجتماعی را به راست می‌کشند. کارت پرداخت چیزی جز سیاست سمبولیک پوپولیستی نیست که به نژادپرستی می‌پردازد و افرادی که به دنبال پناهندگی هستند را بیشتر از جامعه بیرون می‌کند، تبعیض می‌کند و کنترل می‌کند. ادغام به این شکل نیست!</li>
 
-			<li>معرفی کارت پرداخت بدون جایگزین نیست. NRW یک مقرره opt-out معرفی کرده است که به شهرها اجازه می‌دهد کارت پرداخت را معرفی نکنند. از این امکان شهرهای بزرگی استفاده کرده‌اند. ولی در نیدرزاکسن نیز مقاومت وجود دارد: اگرچه آنجا مقرره opt-out وجود ندارد، شهر هانوفر اعلام کرده که کارت پرداخت را معرفی نخواهد کرد و در این راستا با اعتماد به نفس مقاومت باز انجام می‌دهد.
-			شورای شهر به صورت اکثریت و با گروه‌های CDU، SPD و سبزها اعلام کرده‌اند که کارت را به دلیل تبعیض‌آمیز بودن معرفی نخواهند کرد.</li>
+			<li>معرفی کارت پرداخت غیرقابل جایگزینی نیست. NRW یک قانون انتخابی opt-out معرفی کرده است که به جامعه‌ها اجازه می‌دهد کارت پرداخت را معرفی نکنند. از این بسیاری از شهرهای بزرگ قبلاً بهره‌برداری کرده‌اند. اما در نیدرزاکسن نیز مقاومت ظاهر شده است: هرچند که در آنجا قانون انتخابی opt-out وجود ندارد، شهر هانوفر اعلام کرده است که کارت پرداخت را معرفی نخواهد کرد و با این کار با شجاعت مقاومت آشکار انجام می‌دهد. شورای شهری به اتفاق آرا و با حضور حزب‌های CDU, SPD و سبزها اعلام کردند که کارت را معرفی نخواهند کرد زیرا این کارت تبعیض‌آمیز است.</li>
 
 			</ol>
 
-			<p>ما از گروه‌های شورای شهر هایدلبرگ و مدیریت خواستیم کارت پرداخت تبعیض‌آمیز و بی‌معنی را نیز در هایدلبرگ رد کنند.</p>
+			<p>ما از حزب‌های شورای شهری هایدلبرگ و اداره می‌خواهیم که کارت پرداخت تبعیض‌آمیز و بی‌فایده را در هایدلبرگ رد کنند.</p>
 
-			<p>نام‌های اولیه امضا‌کنندگان</p>
+			<p>امضا کنندگان اولیه</p>
 
 			<ul>
 				<li translate="no">Bettina Bauer-Teiwes</li>
@@ -191,7 +184,7 @@
 		<div id="contact" class="content">
 			<h1>تماس و کمک‌های مالی</h1>
 
-			<p>ما یک ساختار باز هستیم و به طور مرتب برای هماهنگی مراحل بعدی ملاقات می‌کنیم. آیا علاقه‌مند به فعالیت علیه کارت پرداخت هستی؟ سپس به یکی از جلسات آینده ما بیا و یا با ما تماس بگیر.</p>
+			<p>ما یک ساختار باز هستیم و به طور منظم برای هماهنگی مراحل بعدی ملاقات می‌کنیم. آیا علاقه‌مندی به فعالیت علیه کارت پرداخت؟ سپس به یکی از جلسات آینده ما بپیوند یا با ما تماس بگیر.</p>
 
 			<h2>تماس</h2>
 
@@ -207,7 +200,7 @@
 Kirchengemeinde Heidelberg
 DE77 6725 0020 0001 2061 76
 Zweck: Gutschein 2813</pre>
-			استفاده از این موضوع ضروری است، وگرنه نمی‌توان کمک مالی را تخصیص داد!
+			استفاده از عنوان مهم است، در غیر این صورت نمی‌توان به درستی کمک مالی را دسته‌بندی کرد!
 		</div>
 
 	</body>
