--- a/www/ru/index.html
+++ b/www/ru/index.html
@@ -31,7 +31,7 @@
 
 		<div class="content">
 			<h1>Инструкции по обмену ваучеров</h1>
-			<p>Вы получаете платежную карту и всего 50 евро наличными в месяц? Если вам нужно больше денег, давайте обменяемся!</p>
+			<p>Вы получаете платежную карту и всего 50 евро наличными в месяц? Если вам нужно больше денег, то давайте обменяемся!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
@@ -45,7 +45,7 @@
 
 			<p>Лучше всего добираться на общественном транспорте с автобусных остановок <span translate="no">Betriebshof</span> и <span translate="no">Hauptbahnhof</span></p>
 			<h2>Когда?</h2>
-			<p>Каждый 2-й вторник и каждую 3-ю пятницу месяца.</p>
+			<p>Каждый 2-й вторник и каждую 3-ю пятницу месяца с 16:00 до 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -121,11 +121,11 @@
 			<p>Мы шокированы и озадачены постепенным введением в Баден-Вюртемберге платежной карты для лиц, получающих пособие для лиц, ищущих убежище. Из-за многочисленных дискриминационных, ограничительных и исключающих аспектов платежной карты мы выступаем против ее введения в Хайдельберге.</p>
 
 			<ol>
-			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они будут перечисляться на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отказ от переводов собственной семье и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
+			<li>У людей, ищущих защиты в Гейдельберге, есть счет, как и у всех остальных. Для доступа к своим деньгам они могут использовать карточку текущего счета. Если они еще не трудоустроены, то первоначально получают пособия в соответствии с AsylbLG. В дальнейшем они должны быть переведены на платежные карты, с которых ограничены как расходы наличными, так и переводы/дебетовые операции. Цель: отсутствие переводов собственной семье и контрабандистам, сдерживание, снижение "факторов притяжения". Такая основа для платежных карт нарушает наши фундаментальные права: запрет на дискриминацию, защиту семьи, личные права.</li>
 
-			<li>Платежная карта - это посягательство на личные права. Люди, покинувшие свою страну, становятся объектом контроля. Они могут лишиться возможности делать покупки в любимых магазинах, потому что небольшим магазинам слишком дорого устанавливать считывающее устройство для дебетовых карт. Переводы и прямые дебетовые платежи требуют разрешения от управления социального обеспечения. Если есть особые потребности, необходимо подать заявление. 50 € наличными - это сумма, которая выдается по усмотрению управления. Выделение самой платежной карты зависит от усмотрения. Это не только ляжет дополнительным бременем на администрацию, но и поставит пострадавших в чудовищную зависимость от ведомства, в том числе и потому, что для них будет потеряна прозрачность.</li>
+			<li>Платежная карта - это посягательство на личные права. Люди, покинувшие свою страну, становятся объектом контроля. Они могут лишиться возможности делать покупки в своих любимых магазинах, потому что небольшим магазинам слишком дорого устанавливать считывающее устройство для дебетовых карт. Переводы и прямые дебетовые платежи требуют разрешения от управления социального обеспечения. Если есть особые потребности, необходимо подать заявление. 50 € наличными - это сумма, которая выдается по усмотрению управления. Выделение самой платежной карты зависит от усмотрения. Это не только ляжет дополнительным бременем на администрацию, но и поставит пострадавших в чудовищную зависимость от ведомства, в том числе и потому, что для них будет потеряна прозрачность.</li>
 
-			<li>Цель введения платежной карты все равно не будет достигнута. Еженедельный доклад DIW 49/2024 показывает, что лишь очень немногие беженцы отправляют денежные переводы за границу, и уж точно меньше всего тех, кто получает пособия по программе AsylbLG, поскольку эти пособия (максимум 441 евро) даже ниже пособия гражданина и уж точно не соответствуют требованиям, установленным постановлением Федерального конституционного суда от 2012 года, согласно которому прожиточный минимум не должен релятивизироваться с точки зрения миграционной политики. Само собой разумеется, что причины бегства имеют более весомое значение, чем вопрос о пособиях.</li>
+			<li>Цель введения платежной карты все равно не будет достигнута. Еженедельный отчет DIW 49/2024 показывает, что лишь очень немногие беженцы отправляют денежные переводы за границу, и уж точно меньше всего тех, кто получает пособия по программе AsylbLG, поскольку эти пособия (максимум 441 евро) даже ниже пособия гражданина и уж точно не соответствуют требованиям, установленным постановлением Федерального конституционного суда от 2012 года, согласно которому прожиточный минимум не должен релятивизироваться с точки зрения миграционной политики. Само собой разумеется, что причины бегства имеют более весомое значение, чем вопрос о пособиях.</li>
 
 			<li>Введение ограничительной платежной карты является частью масштабного наступления на права людей, ищущих защиты. Демонтаж социальных прав беженцев идет рука об руку с расширением "Крепости Европа" и попытками постепенно избавиться от ответственности за защиту беженцев (Всеобщая декларация прав человека 1948 года, статья 14) и своих обязательств, не в последнюю очередь в виде Женевской конвенции о беженцах. Ультраправым удалось сформировать доминирующий дискурс, в котором люди, ищущие защиты, рассматриваются исключительно как угроза. К сожалению, этот расистский нарратив на протяжении многих лет все чаще подхватывают и демократические партии. Тем самым они стимулируют процессы десолидаризации и смещают социальный дискурс вправо. Платежная карта - это не что иное, как популистская символическая политика, которая служит расизму и еще больше маргинализирует, дискриминирует и контролирует тех, кто ищет защиты. Интеграция выглядит иначе!</li>
 
@@ -189,7 +189,7 @@
 			<h2>Свяжитесь с нами</h2>
 
 			<ul>
-				<li>Напишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
+				<li>Пишите нам:<br><a translate="no" href="mailto:kontakt@bezahlkarte-stoppen.de">kontakt@bezahlkarte-stoppen.de</a></li>
 				<li>Instagram:<br><a translate="no" href="https://www.instagram.com/bezahlkartestoppen">@bezahlkartestoppen</a></li>
 				<li translate="no">Telegram:<br><a translate="no" href="https://t.me/bezahlkarte_stoppen">bezahlkarte_stoppen</a></li>
 			</ul>
