--- a/www/de/index.html
+++ b/www/de/index.html
@@ -31,7 +31,7 @@
 
 		<div class="content">
 			<h1>Anleitung zum Gutscheintausch</h1>
-			<p>Du bekommst die Bezahlkarte und nur 50€ Bargeld im Monat? Wenn du mehr Bargeld brauchst, dann lass und tauschen!</p>
+			<p>Du bekommst die Bezahlkarte und nur 50€ Bargeld im Monat? Wenn du mehr Bargeld brauchst, dann lass uns tauschen!</p>
 
 			<img id="cash_card" style="height:8em;" src="../static/img/cash_card.svg" />
 
@@ -45,7 +45,7 @@
 
 			<p>Mit öffentlichen Verkehrsmitteln am besten zu erreichen von den Haltestellen <span translate="no">Betriebshof</span> und <span translate="no">Hauptbahnhof</span></p>
 			<h2>Wann?</h2>
-			<p>Jeden 2. Dienstag und jeden 3. Freitag im Monat.</p>
+			<p>Jeden 2. Dienstag und jeden 3. Freitag im Monat von 16:00 Uhr bis 19:00 Uhr.</p>
 		</div>
 
 		<div class="content">
