--- a/www/uk/index.html
+++ b/www/uk/index.html
@@ -43,9 +43,9 @@
 			<h2>Де?</h2>
 			<p translate="no">Bürgerbüro Die Linke<br />Theodor-Körner-Str. 7<br />69115 Heidelberg</p>
 
-			<p>Найкраще до нас дістатися громадським транспортом від зупинок <span translate="no">Betriebshof</span> та <span translate="no">Hauptbahnhof</span></p>
+			<p>Найкраще добиратися громадським транспортом від автобусних зупинок <span translate="no">Betriebshof</span> та <span translate="no">Hauptbahnhof</span></p>
 			<h2>Коли?</h2>
-			<p>Кожного 2-го вівторка та кожної 3-ї п'ятниці місяця.</p>
+			<p>Кожного 2-го вівторка та кожної 3-ї п'ятниці місяця з 16:00 до 19:00.</p>
 		</div>
 
 		<div class="content">
@@ -123,13 +123,13 @@
 			<ol>
 			<li>Люди, які шукають захисту в Гайдельберзі, мають рахунок, як і всі інші. Вони можуть використовувати свою поточну банківську картку для доступу до своїх грошей. Якщо вони ще не працюють, то спочатку отримують допомогу відповідно до AsylbLG. У майбутньому вони будуть переведені на платіжні картки, на яких обмежені як витрати готівки, так і перекази/дебетування. Мета: заборона переказів власній сім'ї та особам, які займаються незаконним переправленням людей, стримування, зменшення "факторів притягання". Таке тло для платіжної картки порушує наші фундаментальні права: заборона дискримінації, захист сім'ї, особисті права.</li>
 
-			<li>Платіжна картка - це посягання на особисті права. Люди, які втекли з рідної країни, потрапляють під контроль. Вони можуть не мати змоги робити покупки в улюблених магазинах, оскільки для невеликих магазинів встановлення зчитувального пристрою для дебетових карток є надто дорогим задоволенням. Перекази та пряме списання коштів вимагають дозволу від управління соціального захисту. Якщо є особливі потреби, необхідно подати заяву. 50 євро готівкою - це сума, яка залежить від рішення управління. Виділення самої платіжної картки також здійснюється на власний розсуд. Це не тільки покладе додатковий тягар на адміністрацію, але й поставить постраждалих осіб у жахливу залежність від управління, оскільки для них втрачається прозорість.</li>
+			<li>Платіжна картка - це посягання на особисті права. Люди, які втекли з рідної країни, потрапляють під контроль. Вони можуть не мати змоги робити покупки в улюблених магазинах, оскільки для невеликих магазинів встановлення зчитувального пристрою для дебетових карток є надто дорогим задоволенням. Перекази та пряме списання коштів вимагають дозволу від управління соціального захисту. Якщо є особливі потреби, необхідно подати заяву. 50 євро готівкою - це сума, яка залежить від розсуду управління. Виділення самої платіжної картки також здійснюється на власний розсуд. Це не тільки покладе додатковий тягар на адміністрацію, але й поставить постраждалих осіб у жахливу залежність від управління, оскільки для них втрачається прозорість.</li>
 
 			<li>Мета запровадження платіжної картки все одно не буде досягнута. Щотижневий звіт DIW 49/2024 показує, що дуже мало біженців надсилають грошові перекази за кордон, і, звичайно, найменше тих, хто отримує допомогу в рамках AsylbLG, оскільки ця допомога (максимум 441 євро) навіть нижча за допомогу громадянина і, безумовно, не відповідає вимогам, встановленим рішенням Федерального конституційного суду від 2012 року, згідно з яким прожитковий мінімум не повинен бути релятивізований з точки зору міграційної політики. Зрозуміло також, що причини втечі мають більшу вагу, ніж питання виплат.</li>
 
 			<li>Запровадження обмежувальних платіжних карток є частиною масштабного наступу на права людей, які шукають захисту. Демонтаж соціальних прав біженців йде пліч-о-пліч з розширенням Європи-фортеці і спробами поступово позбутися відповідальності за захист біженців (Загальна декларація прав людини 1948 року, стаття 14) і своїх зобов'язань, не в останню чергу у формі Женевської конвенції про статус біженців. Ультраправим вдалося створити домінуючий дискурс, який розглядає людей, що шукають захисту, виключно як загрозу. На жаль, цей расистський наратив роками все частіше підхоплюють і демократичні партії. Таким чином, вони стимулюють процеси десолідаризації та зміщення суспільного дискурсу вправо. Платіжна картка - це не що інше, як популістська символічна політика, яка слугує расизму і сприяє подальшій маргіналізації, дискримінації та контролю над тими, хто шукає захисту. Інтеграція виглядає інакше!</li>
 
-			<li>Альтернативи запровадженню платіжної картки немає. Північний Рейн-Вестфалія запровадив правило відмови, яке дозволяє місцевій владі не запроваджувати платіжні картки. Кілька великих міст вже скористалися цією можливістю. Але в Нижній Саксонії також існує опір: хоча там немає правила відмови, місто Ганновер оголосило, що не запроваджуватиме платіжну картку, і, таким чином, впевнено пропонує відкритий опір. Більшість міської ради, в тому числі ХДС, СДПН і "зелені", заявили, що не запроваджуватимуть картку, оскільки вона є дискримінаційною.</li>
+			<li>Альтернативи запровадженню платіжної картки немає. Північний Рейн-Вестфалія запровадив правило відмови, яке дозволяє місцевій владі не запроваджувати платіжні картки. Кілька великих міст вже скористалися цією можливістю. Але в Нижній Саксонії також є опір: хоча там немає правила відмови, місто Ганновер оголосило, що не буде впроваджувати платіжну картку, і таким чином впевнено пропонує відкритий опір. Більшість міської ради, в тому числі ХДС, СДПН і "зелені", заявили, що не запроваджуватимуть картку, оскільки вона є дискримінаційною.</li>
 
 			</ol>
 
